<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/padding_normal"
    >

  <ImageView
      android:id="@+id/repo_provider_imageview"
      android:layout_width="@dimen/avatar_size"
      android:layout_height="@dimen/avatar_size"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:scaleType="fitXY"
      android:src="@drawable/ic_circular_bitbucket"
      />

  <TextView
      android:id="@+id/repo_name_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_small"
      android:layout_marginRight="72dp"
      android:layout_toRightOf="@+id/repo_provider_imageview"
      android:maxLines="2"
      android:text="@string/list_item_title"
      android:textAppearance="@style/PrimaryTextAppearance"
      />

  <ImageView
      android:id="@+id/repo_visibility_imageview"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/repo_name_textview"
      android:layout_gravity="right"
      app:srcCompat="@drawable/ic_lock_24dp"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/repo_name_textview"
      android:layout_below="@+id/repo_name_textview"
      android:layout_marginTop="@dimen/spacing_small"
      >

    <TextView
        android:id="@+id/repo_language_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:maxEms="24"
        android:maxLines="1"
        android:text="@string/android"
        android:textAppearance="@style/SecondaryTextAppearance"
        />

    <TextView
        android:id="@+id/pr_count_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_pull_request"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/pr_count_text"
        android:textAppearance="@style/AppTheme.TextAppearance.RobotoMedium"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/text_size_medium"
        />

    <TextView
        android:id="@+id/repo_last_updated_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:maxLines="1"
        android:text="@string/time"
        android:textAppearance="@style/SecondaryTextAppearance"
        />
  </RelativeLayout>
</RelativeLayout>