<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal"
    >

  <ImageView
      android:id="@+id/repo_provider_imageview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="fitXY"
      android:src="@drawable/ic_circular_bitbucket"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/repo_name_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_large"
      android:layout_marginStart="@dimen/spacing_large"
      android:maxLines="2"
      android:text="@string/list_item_title"
      android:textAppearance="@style/PrimaryTextAppearance"
      app:layout_constraintLeft_toRightOf="@+id/repo_provider_imageview"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageView
      android:id="@+id/repo_visibility_imageview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_lock_24dp"
      />

  <TextView
      android:id="@+id/repo_language_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:maxEms="24"
      android:maxLines="1"
      android:text="@string/android"
      android:textAppearance="@style/SecondaryTextAppearance"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintLeft_toRightOf="@+id/repo_provider_imageview"
      app:layout_constraintTop_toBottomOf="@+id/repo_name_textview"
      />

  <TextView
      android:id="@+id/pr_count_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/ic_pull_request"
      android:drawablePadding="4dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/pr_count_text"
      android:textAppearance="@style/AppTheme.TextAppearance.RobotoMedium"
      android:textColor="@color/primary_light"
      android:textSize="@dimen/text_size_medium"
      app:layout_constraintLeft_toRightOf="@+id/repo_language_textview"
      app:layout_constraintRight_toLeftOf="@+id/repo_last_updated_textview"
      app:layout_constraintTop_toBottomOf="@+id/repo_name_textview"
      />

  <TextView
      android:id="@+id/repo_last_updated_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:maxLines="1"
      android:text="@string/time"
      android:textAppearance="@style/SecondaryTextAppearance"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/repo_name_textview"
      />
</android.support.constraint.ConstraintLayout>